# linux_peripheral_interfaces

laptop_battery_monitor/: CMakeLists.txt
libsensors_monitor/: CMakeLists.txt
linux_peripheral_interfaces/: CMakeLists.txt
